hphp/hack/test/typecheck/open_tuples/splat/tuple_splat_sub.php.constraint_method_call.exp
ERROR: File "tuple_splat_sub.php", line 42, characters 25-26:
This generic parameter is redundant because it only appears in a covariant (output) position with useless `as` bound. Consider replacing uses of generic parameter with `nothing` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
ERROR: File "tuple_splat_sub.php", line 45, characters 23-23:
This generic parameter is redundant because it only appears in a covariant (output) position with useless `as` bound. Consider replacing uses of generic parameter with `(string, mixed...)` or specifying `<<__Explicit>>` on the generic parameter (Typing[4366])
